--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "dayjs": "^1.11.5",
+    "nanoid": "^4.0.0",
     "pinia": "^2.0.20",
     "underscore": "^1.13.4",
     "vue": "^3.2.37",
